--- a/library.properties
+++ b/library.properties
@@ -1,1 +1,9 @@
-
+name=FlipDisc
+version=1.0.0
+author=Marcin Saj
+maintainer=Marcin Saj - www.Flipo.io
+sentence=Arduino library for flip-disc displays
+paragraph=This library is intended for use with the displays designed by Marcin Saj - https://www.Flipo.io
+category=Display
+url=https://github.com/marcinsaj/FlipDisc
+architectures=*
